# ghc_hyperopt

./: .gitignore  LICENSE  Makefile  README.md  env.yaml  pyproject.toml
FibHaskell/: BenchFib.hs  FibHaskell.cabal
GHC-HyperOpt/: GHC-HyperOpt.cabal  cabal.project
GHC-HyperOpt/app/: Main.hs
GHC-HyperOpt/src/Data/GHC/HyperOpt/: Benchmark.hs  Flags.hs  Harness.hs  Options.hs
GHC-HyperOpt/src/Data/GHC/HyperOpt/Options/: RTS.hs  Tasty.hs
GHC-HyperOpt/test/: Main.hs  ParseBenchmarkTests.hs
ghc_hyperopt/: __main__.py  cabal_build.py  cli.py  config.py  default_config.py  ghc_config.py  process_info.py  rts_config.py  tasty_bench.py  tasty_config.py  utils.py  version.py
ghc_hyperopt/ghc/: config.py  info.py  option.py  option_group.py  requirement.py  tuner.py
ghc_hyperopt/ghc/option/: __init__.py  inliner.py  misc.py  platform.py  questionable.py  simplifier.py  specialiser.py  stg_lift_lams.py
ghc_hyperopt/ghc/options/: __init__.py  inliner.py  misc.py  platform.py  questionable.py  simplifier.py  specialiser.py  stg_lift_lams.py
ghc_hyperopt/tasty/: bench_suite.py  benchmark.py  error.py
ghc_hyperopt/tasty/benchmark/: __init__.py  memory_info.py  result.py  time_info.py
