[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ghc_hyperopt"
version = "0.1.0"
authors = [{ name = "Connor Baker", email = "connorbaker01@gmail.com" }]
# We make use of the fact that dictionaries are ordered
requires-python = ">=3.12"
license = { text = "BSD3" }
description = "Hyperparameter optimization for GHC compiler and RTS flags"
dependencies = [
    "optuna>=3.5.0",
    "optuna-dashboard>=0.14.0",
    "gunicorn>=21.2.0",
    "psutil>=5.9.7",
    "pydantic>=2.5.3",
    "wandb>=0.16.1"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.11",
    "pyright>=1.1.344"
]

[tool.ruff]
preview = true
select = ["F", "E", "W", "I", "PL", "FURB", "LOG", "RUF", "G", "TID"]
ignore = [
    # Ignore functions with many arguments (I like currying)
    "PLR0913",
    # Ignore syntax error in forward annotation for jaxtyping
    "F722",
]
line-length = 120

[tool.pyright]
include = ["./ghc_hyperopt"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

# Disable reporting of unknown types
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false

# Misc
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true